saçma gizli dosyalar kalkar

--- a/Beginner.ipynb
+++ b/Beginner.ipynb
@@ -38,7 +38,28 @@
    ],
    "source": [
     "rdd = sc.textFile('README.md') # Repodaki README\n",
-    "rdd.count()"
+    "rdd.count() # Dosyadaki satır sayısı"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd2 = rdd.filter(lambda line: \"Python\" in line)\n",
+    "rdd2.count() #Python geçen satır sayısı"
    ]
   }
  ],
