--- a/jupyter-notebooks/spark_context_and_rdd.ipynb
+++ b/jupyter-notebooks/spark_context_and_rdd.ipynb
@@ -18,12 +18,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,68 +105,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "8\ntype: <class 'int'>\n"
+     ]
     }
    ],
    "source": [
     "# count(): RDD' de bulunan element' lerin sayısını döndürür.\n",
-    "words.count()"
+    "words.count()\n",
+    "print(count)\n",
+    "print(\"type:\", type(count))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['scala',\n",
-       " 'java',\n",
-       " 'hadoop',\n",
-       " 'spark',\n",
-       " 'akka',\n",
-       " 'spark vs hadoop',\n",
-       " 'pyspark',\n",
-       " 'pyspark and spark']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['scala', 'java', 'hadoop', 'spark', 'akka', 'spark vs hadoop', 'pyspark', 'pyspark and spark']\ntype:  <class 'list'>\n"
+     ]
     }
    ],
    "source": [
     "# collect(): RDD' deki bütün element' leri döndürür\n",
-    "words.collect()"
+    "collect = words.collect() # RDD to Array\n",
+    "print(collect)\n",
+    "print(\"type: \", type(collect))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# foreach(): foreach fonksiyonuna parametre olarak verilen fonksiyonun şartını sağlayan elementleri dödürür.\n",
+    "# foreach(): foreach fonksiyonuna parametre olarak verilen fonksiyonu RDD içindeki bütün elemanlara uygular\n",
     "def f(x):\n",
-    "    print(x)\n",
-    "words.foreach(f)"
+    "    print(\"Merhaba dünya\", x)\n",
+    "words.foreach(f) # Çalışmaıyor. Neden bilmiyorum."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +168,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 17
     }
    ],
    "source": [
@@ -188,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -206,76 +197,106 @@
       ]
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 19
     }
    ],
    "source": [
     "# map(): RDD' deki her bir element' e aynı işlemi uygulayarak yeni bir RDD döndürür.\n",
     "words_map = words.map(lambda x: (x, 1))\n",
-    "words_map.collect()\n",
-    "\n",
-    "#for i in words_map.collect():\n",
-    "#    print(i[0])\n",
-    "# çalışıyor"
+    "words_map.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "15\nscalajavahadoopsparkakkaspark vs hadooppysparkpyspark and spark\n"
+      "15\n",
+      "scalajavahadoopsparkakkaspark vs hadooppysparkpyspark and spark\n",
+      "scala-java-hadoop-spark-akka-spark vs hadoop-pyspark-pyspark and spark\n",
+      "words_concat: <class 'str'>\n",
+      "1-2-3-4-5\n"
      ]
     }
    ],
    "source": [
-    "# reduce(): Kendisine parametre olarak verilen işlemi gerçekleştirir.\n",
+    "# reduce(): Kendisine parametre olarak verilen fonksiyonu bütün elemanlar üzerinde gerçekleştirir. Map fonksiyonundan farkı sanırım şu; map eleman birleştirme vb. gibi işlemler yapmıyor. Bunun adında anlaşılacağı üzere reduce azaltıyor, küçültüyor.\n",
     "from operator import add\n",
     "nums = sc.parallelize([1, 2, 3, 4, 5])\n",
     "print(nums.reduce(add))\n",
     "print(words.reduce(add))\n",
     "\n",
-    "#def myAdd(x):\n",
-    "#    filtered_arr = list(filter(lambda i: \"spark\" in i, x.collect()))\n",
-    "#    return ''.join(filtered_arr)\n",
+    "def my_add(a, b):\n",
+    "    return f'{a}-{b}'\n",
     "\n",
-    "#words.reduce(myAdd)"
+    "words_concat = words.reduce(my_add)\n",
+    "print(words_concat)\n",
+    "print(\"words_concat:\", type(words_concat))\n",
+    "print(nums.reduce(my_add))\n",
+    "\n",
+    "# 2' den fazla parametre alan fonksiyonları çalıştırmıyor sanırım.\n",
+    "#def my_add_2(a, b, c):\n",
+    "#    return f'{a}-{b}-{c}'\n",
+    "\n",
+    "# print(words.reduce(my_add_2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[('hadoop', (4, 5)), ('spark', (1, 2))]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 55
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[('hadoop', (4, 5)), ('spark', (1, 2)), ('spark', (1, 16)), ('spark', (1, 100))]\n",
+      "[('hadoop', (5, 4)), ('spark', (2, 1)), ('spark', (16, 1)), ('spark', (100, 1))]\n"
+     ]
     }
    ],
    "source": [
-    "# join():\n",
+    "# join(): İki farklı RDD' nin key' lerini baz alarak value değerlerini birleştirir. RDD_A içindeki eleman (k, v1), RDD_2 içindeki eleman (k, v2) ise onları (k, (v1, v2)) şekilinde birleştiriyor. Peki böyle bir şey neden var? Peki neden (k, v) şeklinde olmak zorunda?\n",
     "x = sc.parallelize([(\"spark\", 1), (\"hadoop\", 4), (\"dene\", 4)])\n",
-    "y = sc.parallelize([(\"spark\", 2), (\"hadoop\", 5), (\"naber\", 4)])\n",
+    "y = sc.parallelize([(\"spark\", 2), (\"hadoop\", 5), ('spark', 16, 17), (\"naber\", 4), ['spark', 100]])\n",
+    "# , {'spark': 200} koydum y' ye hata verdi.\n",
     "joined = x.join(y)\n",
-    "joined.collect()"
+    "print(joined.collect())\n",
+    "\n",
+    "joined = y.join(x)\n",
+    "print(joined.collect())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nFalse\nTrue\nFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cache(): Persist(kalıcı) this RDD with the default storage level (MEMORY_ONLY).\n",
+    "# işlemlerin çok daha hızlı olması içindir. Belki Spark işlemi gerçekleştirdikten sonra RAM' den siliyor. Bu fonksiyon sayesinde verileri RAM' de kalıcı yapıyor\n",
+    "\n",
+    "print(words.persist().is_cached)\n",
+    "# persist(): fonksiyonu' da kalıcı yapıyor. Fonksiyonun açıklamasını oku.\n",
+    "# is_cahched RDD nesnesine ait bir değişken\n",
+    "\n",
+    "print(nums.is_cached)\n",
+    "print(nums.persist().is_cached)\n",
+    "print(nums.unpersist().is_cached)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
