--- a/jupyter-notebooks/scala_doc_01.ipynb
+++ b/jupyter-notebooks/scala_doc_01.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "textFile: org.apache.spark.sql.Dataset[String] = [value: string]\n"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,26 +293,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "wordCounts: org.apache.spark.sql.Dataset[(String, Long)] = [key: string, count(1): bigint]\n",
-       "res28: Array[(String, Long)] = Array((şekilde,1), (ı,1), (notlarımı,1), (Giriş,1), (Sistemi,1), (kullanmaya,1), (olarakta,1), (~~Apache,1), (yapabiliyormuşuz.,1), (verdim.,2), (Linux,1), (kullanmaktayım.,1), (dağıtım,1), (Apache,1), (olarak,1), (bu,1), (işlemleri,1), (Ubuntu,1), (Scala,1), (yazmaya,1), (İşletim,1), (yaptım.~~,1), (PySpark,1), (ile,3), (Python,1), (Spark',1), (##,1), (Spark,1), (ilgili,1), (Jupyter,1), (\"\",4), (tutacağım.,1), (karar,2), (kullandım.,1), ([şu](./kurulum.md),1), (notebook,1), (Kurulumu,1))\n"
+       "wordCounts: org.apache.spark.sql.Dataset[(String, Long)] = [key: string, count(1): bigint]\n"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// Burada kaldım.\n",
+    "// One common data flow pattern is MapReduce, as popularized by Hadoop. Spark can implement MapReduce flows easily\n",
     "val wordCounts = textFile.flatMap(line => line.split(\" \")).groupByKey(identity).count()\n",
+    "\n",
+    "// flat map ile satır Dataset' i olan textFile' ı kelime datasetine çeviriyor. \n",
+    "// groupByKey ve count ile kelimelerin sayısını elde ediliyor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res2: Array[(String, Long)] = Array((şekilde,1), (ı,1), (notlarımı,1), (Giriş,1), (Sistemi,1), (kullanmaya,1), (olarakta,1), (~~Apache,1), (yapabiliyormuşuz.,1), (verdim.,2), (Linux,1), (kullanmaktayım.,1), (dağıtım,1), (Apache,1), (olarak,1), (bu,1), (işlemleri,1), (Ubuntu,1), (Scala,1), (yazmaya,1), (İşletim,1), (yaptım.~~,1), (PySpark,1), (ile,3), (Python,1), (Spark',1), (##,1), (Spark,1), (ilgili,1), (Jupyter,1), (\"\",4), (tutacağım.,1), (karar,2), (kullandım.,1), ([şu](./kurulum.md),1), (notebook,1), (Kurulumu,1))\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "wordCounts.collect()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|     value|\n",
+      "+----------+\n",
+      "|        ##|\n",
+      "|     Giriş|\n",
+      "|          |\n",
+      "|    Apache|\n",
+      "|     Spark|\n",
+      "|       ile|\n",
+      "|    ilgili|\n",
+      "| notlarımı|\n",
+      "|tutacağım.|\n",
+      "|          |\n",
+      "|  ~~Apache|\n",
+      "|    Spark'|\n",
+      "|         ı|\n",
+      "|    Python|\n",
+      "|       ile|\n",
+      "|   yazmaya|\n",
+      "|     karar|\n",
+      "|   verdim.|\n",
+      "|   PySpark|\n",
+      "|kullandım.|\n",
+      "+----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "wordDataset: org.apache.spark.sql.Dataset[String] = [value: string]\n"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Şimdi yukarıdaki işlemleri teker teker yapalım\n",
+    "val wordDataset = textFile.flatMap(line => line.split(\" \"))\n",
+    "wordDataset.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+--------+\n",
+      "|              key|count(1)|\n",
+      "+-----------------+--------+\n",
+      "|          şekilde|       1|\n",
+      "|                ı|       1|\n",
+      "|        notlarımı|       1|\n",
+      "|            Giriş|       1|\n",
+      "|          Sistemi|       1|\n",
+      "|       kullanmaya|       1|\n",
+      "|         olarakta|       1|\n",
+      "|         ~~Apache|       1|\n",
+      "|yapabiliyormuşuz.|       1|\n",
+      "|          verdim.|       2|\n",
+      "|            Linux|       1|\n",
+      "|  kullanmaktayım.|       1|\n",
+      "|          dağıtım|       1|\n",
+      "|           Apache|       1|\n",
+      "|           olarak|       1|\n",
+      "|               bu|       1|\n",
+      "|        işlemleri|       1|\n",
+      "|           Ubuntu|       1|\n",
+      "|            Scala|       1|\n",
+      "|          yazmaya|       1|\n",
+      "+-----------------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "workDatasetKeyCountPair: org.apache.spark.sql.Dataset[(String, Long)] = [key: string, count(1): bigint]\n"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val workDatasetKeyCountPair = wordDataset.groupByKey(identity).count()\n",
+    "workDatasetKeyCountPair.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res17: Array[(String, Long)] = Array((şekilde,1), (ı,1), (notlarımı,1), (Giriş,1), (Sistemi,1), (kullanmaya,1), (olarakta,1), (~~Apache,1), (yapabiliyormuşuz.,1), (verdim.,2), (Linux,1), (kullanmaktayım.,1), (dağıtım,1), (Apache,1), (olarak,1), (bu,1), (işlemleri,1), (Ubuntu,1), (Scala,1), (yazmaya,1), (İşletim,1), (yaptım.~~,1), (PySpark,1), (ile,3), (Python,1), (Spark',1), (##,1), (Spark,1), (ilgili,1), (Jupyter,1), (\"\",4), (tutacağım.,1), (karar,2), (kullandım.,1), ([şu](./kurulum.md),1), (notebook,1), (Kurulumu,1))\n"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "workDatasetKeyCountPair.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
