RDD_ipbyn_update

--- a/jupyter-notebooks/scala_doc_2_RDD.ipynb
+++ b/jupyter-notebooks/scala_doc_2_RDD.ipynb
@@ -2,53 +2,46 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "official-industry",
    "metadata": {},
    "source": [
-    "## [RDD Programming Guide](https://spark.apache.org/docs/latest/rdd-programming-guide.html)"
+    "# [RDD Programming Guide](https://spark.apache.org/docs/latest/rdd-programming-guide.html)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "affected-vampire",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Intitializing Scala interpreter ..."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Spark Web UI available at http://DESKTOP-OSJLI5V:4041\n",
-       "SparkContext available as 'sc' (version = 3.0.1, master = local[*], app id = local-1611863527119)\n",
-       "SparkSession available as 'spark'\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "// Spark Run\n",
+    "## [Overview](https://spark.apache.org/docs/latest/rdd-programming-guide.html#overview)\n",
     "\n",
-    "// SparkContext as sc\n",
-    "// SparkSession as spark"
+    "**High level** her Spark uygulaması ***driver program*** denen bir şeyden oluşur. Bu ***driver program*** kullanıcın *main* fonksiyonunu çalıştırır ve **cluster** üzerinde çeşitli paralel işlemleri execute eder.\n",
+    "\n",
+    "Spark' ın sağladığı main **absraction** ***resilient distributed dataset*** (RDD) olmaktadır. RDD, bir elemanlar kümesidir(collection of elements). RDD, cluster üzerindeki node' lar boyunca partition' lara (bölümlere) ayrılmıştır. RDD' lerin node' lara bölünmesi sayesinde paralel işlemler yapılabilmektedir.\n",
+    "\n",
+    "RDD' ler çeşitli formattaki dosyalardan ya da driver program içindeki collectionlardan oluşturulabilir (collectiondan kasıt sanırım scala dizileri ya da hangi dili kullanıyorsanız).\n",
+    "\n",
+    "Eğer bir RDD' yi çok sık şekilde kullanacaksanız Spark' a bu RDD' yi cache al diyebiliyorsunuz.\n",
+    "\n",
+    "RDD' ler node' larda oluşan hatalardan otomatik olarak recover edilirler Sanırım hiç hata olmamış hallerine geri döndürülürler.\n",
+    "\n",
+    "___\n",
+    "\n",
+    "Spark' ın ikinci absraction' u paralel işlemler kullanılan ***shared variables*** tir.\n",
+    "\n",
+    "Sanırım Spark' ta Default olarak şöyle bir şey gerçekleştiriliyor: Spark' ta paralel bir işlem başladığında node' lara task' lar dağıtılıyor. Bu task' lar için gerekli olan variable' lar node' larda çalışacak olan fonksiyona kopyalanıyor.\n",
+    "\n",
+    "Bazen bir tane değişkenin tasklar arasında ya da task ile driver program arasında shared edilmesi gerekiyormuş. Bu özelliğin var olma sebebi bu.\n",
+    "\n",
+    "Sparkta iki tane shared variables türü varmış:\n",
+    "***broadcast variables***: Tüm nodeların memory' lerindeki bir value' yi cache almak için kullanılır. (Ne demek bilmiyorum.)\n",
+    "***accumulators***: Yanlızca \"added\" değişkenlermiş. Örneğin counters ve sum. (Ne demek bilmiyorum as well)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "loved-butter",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## [Resilient Distributed Datasets (RDDs)]()"
+   ]
   }
  ],
  "metadata": {
