RDD_ipbyn_update

--- a/jupyter-notebooks/scala_doc_2_RDD.ipynb
+++ b/jupyter-notebooks/scala_doc_2_RDD.ipynb
@@ -40,7 +40,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Resilient Distributed Datasets (RDDs)]()"
+    "## [Resilient Distributed Datasets (RDDs)](https://spark.apache.org/docs/latest/rdd-programming-guide.html#resilient-distributed-datasets-rdds)\n",
+    "\n",
+    "Spark ***Resilient Distributed Datasets*** kavramı etrafında döner. RDD, paralel olarak çalıştırılabilen, hata toleranslı elementler koleksiyonudur (**fault-tolerant** collection of elements).\n",
+    "\n",
+    "RDD iki şekilde oluşturulur: <br/>\n",
+    "birincisi driver programda bulunan colloection' u ***parallelizing*** ederek. <br/>\n",
+    "ikincisi external storage system' da bulunan bir dataset' e referans vererek. external storage system, such as a shared filesystem, HDFS, HBase, or any data source offering a Hadoop InputFormat.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parallelized Collections\n",
+    "\n",
+    "Bir parallelized collection, sizin driver programınızda bulunan collection' ı parametre olarak olan ***SparkContext***' in ***parallelize*** metodu ile oluşturulur."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "data: Array[Int] = Array(1, 2, 3, 4, 5)\n",
+       "distData: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[6] at parallelize at <console>:28\n"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val data = Array(1, 2, 3, 4, 5)\n",
+    "val distData = sc.parallelize(data) //RDD oluştu Normally, Spark tries to set the number of partitions automatically based on your cluster. However, you can also set it manually by passing it as a second parameter to parruldu \n",
+    "// ve paralel işlem yapılabilir artık."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parallel collection' larda önemli bir konuda bu RDD' nin kaç tane partition' a bölüneceği. Spark normalde partion' lama işlemlerini kendi yaparmış. Ama elle biz de verebilirmişiz. Elle vermek istersek `sc.parallelize(data, 10)` bu şekilde yapabiliriz.\n",
+    "\n",
+    "> Bazı yerlerde `partions` yerine `slices` ifadesi geçebilirmiş."
    ]
   }
  ],
